feat: 添加题目公开状态控制和团队模块
1. 题目模块改进:
   - 添加题目公开状态(isPublic)字段，管理员可控制题目可见性
   - 不公开题目仅管理员可见，用户无法通过列表或直接访问查看
   - 管理员列表页面增加公开状态筛选功能
   - 修复参数校验逻辑错误(answer/judgeCase/judgeConfig字段)
   - 修复QuestionVO转换逻辑错误(tags字段)
   - 修复查询条件字段错误(answer字段)
   - 移除System.out.println调试日志，改用log.debug()

2. 团队模块:
   - 新增团队管理功能(创建、更新、删除、查询)
   - 新增团队成员管理(加入、退出、邀请、移除)
   - 支持队长邀请成员和移除成员
   - 修复移除成员后再次邀请的唯一键冲突问题

3. 其他改进:
   - 前端标题长度校验与后端保持一致(80字符)
   - 添加SQL脚本更新现有题目的isPublic字段

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>